[gd_scene load_steps=35 format=3 uid="uid://dk32m762csoio"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_17orj"]
[ext_resource type="Shader" path="res://scenes/player.gdshader" id="2_f06t2"]
[ext_resource type="Texture2D" uid="uid://c0vipkhkiqtwe" path="res://assets/Small-8-Direction-Characters_by_AxulArt.png" id="2_xceie"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6kjbq"]
shader = ExtResource("2_f06t2")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8i8ol"]
atlas = ExtResource("2_xceie")
region = Rect2(32, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0uei"]
atlas = ExtResource("2_xceie")
region = Rect2(32, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ivf7"]
atlas = ExtResource("2_xceie")
region = Rect2(32, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_duutx"]
atlas = ExtResource("2_xceie")
region = Rect2(48, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm2n4"]
atlas = ExtResource("2_xceie")
region = Rect2(48, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfr6g"]
atlas = ExtResource("2_xceie")
region = Rect2(48, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwroo"]
atlas = ExtResource("2_xceie")
region = Rect2(64, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb1s3"]
atlas = ExtResource("2_xceie")
region = Rect2(64, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqok1"]
atlas = ExtResource("2_xceie")
region = Rect2(64, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_als5j"]
atlas = ExtResource("2_xceie")
region = Rect2(80, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6ki0"]
atlas = ExtResource("2_xceie")
region = Rect2(80, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2llx"]
atlas = ExtResource("2_xceie")
region = Rect2(80, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wugmt"]
atlas = ExtResource("2_xceie")
region = Rect2(96, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m6ix"]
atlas = ExtResource("2_xceie")
region = Rect2(96, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hffsi"]
atlas = ExtResource("2_xceie")
region = Rect2(96, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_47ocv"]
atlas = ExtResource("2_xceie")
region = Rect2(112, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufngy"]
atlas = ExtResource("2_xceie")
region = Rect2(112, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiq4t"]
atlas = ExtResource("2_xceie")
region = Rect2(112, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rkbp"]
atlas = ExtResource("2_xceie")
region = Rect2(0, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pskw"]
atlas = ExtResource("2_xceie")
region = Rect2(0, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxx5q"]
atlas = ExtResource("2_xceie")
region = Rect2(0, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d3ny"]
atlas = ExtResource("2_xceie")
region = Rect2(16, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgl14"]
atlas = ExtResource("2_xceie")
region = Rect2(16, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1n2f"]
atlas = ExtResource("2_xceie")
region = Rect2(16, 168, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_oc0d6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i8ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0uei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ivf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0uei")
}],
"loop": true,
"name": &"walk0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_duutx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm2n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfr6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm2n4")
}],
"loop": true,
"name": &"walk1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwroo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb1s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqok1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb1s3")
}],
"loop": true,
"name": &"walk2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_als5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6ki0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2llx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6ki0")
}],
"loop": true,
"name": &"walk3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wugmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m6ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hffsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m6ix")
}],
"loop": true,
"name": &"walk4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_47ocv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufngy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiq4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufngy")
}],
"loop": true,
"name": &"walk5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rkbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pskw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxx5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pskw")
}],
"loop": true,
"name": &"walk6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d3ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgl14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1n2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgl14")
}],
"loop": true,
"name": &"walk7",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6ii7r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_36qc1"]
resource_name = "flash"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_sjsoe"]
resource_name = "invul"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tl1g5"]
_data = {
"RESET": SubResource("Animation_6ii7r"),
"flash": SubResource("Animation_36qc1"),
"invul": SubResource("Animation_sjsoe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16ko5"]
size = Vector2(12, 14)

[node name="player" type="CharacterBody2D"]
z_index = 1
scale = Vector2(3, 3)
collision_layer = 2
script = ExtResource("1_17orj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6kjbq")
sprite_frames = SubResource("SpriteFrames_oc0d6")
animation = &"walk2"
frame = 3
frame_progress = 0.899428

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_tl1g5")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_16ko5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="boost_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="gun_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="invul_timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="boost_timer" to="." method="_on_boost_timer_timeout"]
[connection signal="timeout" from="gun_timer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="invul_timer" to="." method="_on_invul_timer_timeout"]
